# crewai-zendesk

./: README.md  pyproject.toml  ticket_summary.md
src/zendesk_ticket_analysis/: crew.py  main.py
src/zendesk_ticket_analysis/config/: agents.yaml  tasks.yaml
src/zendesk_ticket_analysis/tools/: FetchZendeskTickets.py
