[project]
name = "zendesk_ticket_analysis"
version = "0.1.0"
description = "Zendesk ticket analysis using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2",
]

[project.scripts]
zendesk_ticket_analysis = "zendesk_ticket_analysis.main:run"
run_crew = "zendesk_ticket_analysis.main:run"
train = "zendesk_ticket_analysis.main:train"
replay = "zendesk_ticket_analysis.main:replay"
test = "zendesk_ticket_analysis.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
